# Codex

./: .gitignore  .project  README.md  cmd.txt  trt.txt
Thesis Project/: .cproject  .gitignore  README.md
Thesis Project/MRTD/: .cproject  .project
Thesis Project/MRTD/src/: main.cpp
Thesis Project/camera/: usbcam.h
Thesis Project/datasets/drone_single_class/: README.md  dataset.yaml  import_sources.md  labeling_rules.md
Thesis Project/datasets/drone_single_class/manifests/: cleaned_dataset_validation_report.json  drone_detection_dataset_drone_pairs.csv  drone_detection_dataset_inventory.json  kaggle_drone_object_detection_import_summary.json  public_video_eval_manifest.json
Thesis Project/datasets/drone_single_class/scripts/: README.md  import_kaggle_drone_object_detection.py  import_public_uav_videos.py  validate_yolo_dataset.py
Thesis Project/docs/paper_archive/: full_thesis_latest_merged_before_ch5_hardware_matrix_20260428_220358.docx
Thesis Project/docs/superpowers/specs/: 2026-03-30-rk3588-yolov10-video-design.md  2026-04-20-drone-training-bootstrap-design.md  2026-04-21-drone-model-deployment-defaults-design.md  2026-04-21-drone-model-error-analysis.md  2026-04-21-public-video-eval-bootstrap-summary.md  2026-04-21-rk3588-npu-best-live-config-recommendation.md  2026-04-21-rk3588-npu-experiment-command-drafts.md  2026-04-21-rk3588-npu-experiment-record-template.md  2026-04-21-rk3588-npu-first-live-results-summary.md  2026-04-21-rk3588-npu-first-round-experiment-matrix.md  2026-04-22-project-history-master-index.md  2026-04-22-thesis-requirements-progress-mapping.md  2026-04-22-weekly-log-materials-drone-board-recovery.md  2026-04-25-drone-rtsp-integration-smoke-test.md  2026-04-25-rk3588-ssh-location-map.md  2026-04-25-rknn-stage-profile-bottleneck.md  2026-04-25-rknn-zero-copy-input-experiment.md  2026-04-25-rtsp-detect-every-n-smoothing-ablation.md  2026-04-25-rtsp-multi-context-performance-ablation.md  2026-04-28-fixed-video-hardware-performance-matrix.md  2026-04-28-live-rtsp-final-validation.md  2026-04-28-live-rtsp-rga-frame-resize-validation.md  2026-04-28-live-rtsp-rga-nv12-publish-validation.md  2026-04-28-live-rtsp-rga-preprocess-validation.md  (+34 more)
Thesis Project/encoder/: .project  block.c  config.h  main.h  util.c
Thesis Project/encoder/demux/: av.c
Thesis Project/encoder/gpu/: video_decode.cpp  video_encode.h
Thesis Project/encoder/input/: filein.cpp
Thesis Project/encoder/live555/: live555.mk
Thesis Project/encoder/output/: rtsp.cpp
Thesis Project/encoder/rknn_experimental/: CMakeLists.txt
Thesis Project/encoder/unet/: mimo_unet.h  unet.cpp
Thesis Project/httpd/: .cproject  .project  base64.h  http.c  http.h  httpd.c  macros.h  mvar.c  net.c  rpn.c  util.c  vlc_httpd.h
Thesis Project/paper/: README.md  chapter_3_system_design_latest.docx  chapter_4_system_implementation_latest.docx  chapter_5_experiments_analysis_latest.docx  defense_presentation_speaker_notes_v1.md  defense_presentation_v1.pptx  full_thesis_latest_merged.docx  full_thesis_latest_merged_int8_synced.docx
Thesis Project/rk_yolo_live_rtsp/: CMakeLists.txt  README.md
Thesis Project/rk_yolo_live_rtsp/src/: main.cpp
Thesis Project/rk_yolo_video/: CMakeLists.txt  README.md
Thesis Project/rk_yolo_video/baselines/: test_mp4_tuned_default.json
Thesis Project/rk_yolo_video/include/: yolo_encoder_adapter.h  yolo_rknn.h
Thesis Project/rk_yolo_video/scripts/: run_taskbook_int8_eval.sh  run_taskbook_int8_sweep.sh  run_taskbook_pipeline_eval.sh
Thesis Project/rk_yolo_video/src/: main.cpp  yolo_rknn.cpp
Thesis Project/rk_yolo_video/tools/: convert_yolov10_to_rknn.py  export_yolov10_onnx_wsl.sh  validate_detection_csv.py
Thesis Project/tools/diagnostics/: rknn_minimal_probe.cpp
Thesis Project/tools/int8_rga/: README.md  convert_onnx_to_rknn.py  make_board_experiment_commands.py  make_calibration_list.py  run_int8_rga_experiments.sh  summarize_profile_csv.py
Thesis Project/training/drone_yolov10/: README.md  analyze_drone_predictions.py  evaluate_public_videos.py  requirements.txt  train_drone_yolov10.py
Thesis Project/unet/: .cproject  .project
Thesis Project/unet/src/: main.cpp  mimo_unet.cpp
Thesis Project/yolov10/: .cproject  .project  yolov10.cpp
camera/: .cproject  test.cpp
datasets/drone_single_class/: dataset.yaml  import_sources.md
datasets/drone_single_class/scripts/: README.md  inventory_drone_detection_dataset.py
docs/superpowers/specs/: 2026-04-14-drone-dataset-design.md
encoder/: .cproject  Queue.h  block.h  config.c  main.c  ts.h  util.h
encoder/gpu/: preprocess.cpp  video_decode.h  video_encode.cpp
encoder/gpu/cu/: Image.cu  NvCodecUtils.h
encoder/input/: camera.cpp
encoder/live555/mediaServer/: WavFileWrite.cpp  live555MediaServer.cpp
encoder/net/: net.c  network.h  tcp.c
encoder/rknn_experimental/: README.md  smoketest.cpp
encoder/unet/: mimo_unet.cpp
encoder/yolo/: yolov10.cpp  yolov10_rknn.cpp  yolov10_rknn.h
httpd/: acl.c  base64.c  macro.c  network.h  tcp.c  vlc_acl.h
rk_yolo_live_rtsp/: README.md
rk_yolo_live_rtsp/src/: main.cpp
rk_yolo_video/: CMakeLists.txt  README.md
rk_yolo_video/include/: yolo_legacy_roi.h  yolo_rknn.h
rk_yolo_video/src/: yolo_encoder_adapter.cpp  yolo_legacy_roi.cpp
unet/include/: mimo_unet.h
(+39 files in other folders)
